--- a/SiteServer.Web/SiteServer/pageError.html
+++ b/SiteServer.Web/SiteServer/pageError.html
@@ -38,7 +38,7 @@
         </blockquote>
       </div>
       <div class="card-footer text-muted">
-        <span class="m-r-5">如需帮助，请点击链接向 SiteServer CMS 官方 <a target="_blank" v-bind:href="'https://github.com/siteserver/cms/issues/new?title=' + message + '&body=' + stacktrace">提交问题</a></span>
+        <span class="m-r-5">如需帮助，请点击链接向 网站管理平台 官方 <a target="_blank" v-bind:href="'https://github.com/siteserver/cms/issues/new?title=' + message + '&body=' + stacktrace">提交问题</a></span>
       </div>
     </div>
 
